# pypayu

./: .gitignore  Dockerfile  README.rst  docker-compose.yml  pyproject.toml
pypayu/: __init__.py
tests/: test_pypayu.py
