[tool.poetry]
name = "pypayu"
version = "0.1.0"
description = ""
authors = ["Przemysław Łada <przlada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uplink = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
requests-mock = "^1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
